# bidmart-auction-service-rust

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  heroku.yml  sonar-project.properties
.github/workflows/: cd.yml  ci.yml  trigger-vps-deploy.yml
docs/: 0. Overview.md  1. Software Design.md  10. Desain integrasi.md  2. Software Quality.md  3. Software Architecture.md  4. Software Deployment.md  6. Non Functional Considerations.md  7. Profiling Report.md  8. Spesifikasi.md  9. Api.md  auction-production-readiness.md  deployment-strategy.md  openapi.yaml
docs/evidence/: README.md
migrations/: 20260428000000_init.sql
src/: auction.rs  config.rs  lib.rs  listing_auction_session.rs  main.rs  server.rs
src/client/: catalog_client.rs  http_service_client.rs  mod.rs  wallet_client.rs
src/http/: dto.rs  mod.rs  router.rs
src/persistence/: models.rs  repositories.rs
src/scheduler/: auction_closure_scheduler.rs  mod.rs  outbox_scheduler.rs  rabbitmq_outbox_publisher.rs
tests/: api_tests.rs  architecture_documentation_tests.rs  auction_closure_scheduler_tests.rs  auction_event_contract_tests.rs  auction_place_bid.rs  auction_strategy_tests.rs  bid_concurrency_tests.rs  bid_policy_tests.rs  catalog_http_client_tests.rs  catalog_integration_tests.rs  client_error_tests.rs  close_strategy_tests.rs  config_tests.rs  domain_model_tests.rs  load_performance_harness_tests.rs  metrics_tests.rs  outbox_event_envelope_tests.rs  outbox_scheduler_tests.rs  persistence_tests.rs  platform_connection_tests.rs  profile_bidding_comparison_tests.rs  rabbitmq_outbox_publisher_tests.rs  rabbitmq_publisher_tests.rs  reliability_refactor_tests.rs  router_error_tests.rs  scheduler_unit_tests.rs  security_headers_tests.rs  server_tests.rs  service_tests.rs  wallet_http_client_tests.rs  wallet_integration_tests.rs
(+19 files in other folders)
