[package]
name = "bidmart-auction-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.11"
sqlx = { version = "0.7.4", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"
