[package]
name = "bidmart-auction-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
sqlx = { version = "0.7.4", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
