[package]
name = "bidmart-auction-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
async-trait = "0.1.75"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.11"
sqlx = { version = "0.7.4", features = ["any", "macros", "postgres", "runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
anyhow = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde_json = "1.0"
url = "2.5"
dotenvy = "0.15"
lapin = "2.3"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
